--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
     <header>
         <div class="header">
-            <a href=""><img src="/images/logo.svg" alt="Logo"></a>
+            <a href=""><img src="./images/logo.svg" alt="Logo"></a>
             <nav>
                 <ul class="nav">
                     <li class="nav__item">
@@ -58,7 +58,7 @@
                 <a href="#" class="btn-group__btn btn-group__btn-main">Créer mon compte</a>
                 <a href="#" class="btn-group__btn">Voir la vidéo</a>
             </div>
-            <img class="banner__img" src="/images/banner.png" alt="Banner">
+            <img class="banner__img" src="./images/banner.png" alt="Banner">
         </div>
     </section>
     <section class="section">
@@ -132,7 +132,7 @@
                     <div class="comment__info">
                         <div class="comment__info__about">
                             <div class="comment__info__about__photo">
-                                <img src="/images/feedback/Frame.svg" alt="">
+                                <img src="./images/feedback/Frame.svg" alt="">
                             </div>
                             <div class="comment__info__about__name">
                                 <p class="comment__info__about__name__fullname">
@@ -144,7 +144,7 @@
                             </div>
                         </div>
                         <div class="comment__info__social">
-                            <img src="/images/feedback/Vector2.svg" alt="">
+                            <img src="./images/feedback/Vector2.svg" alt="">
                         </div>
 
                     </div>
@@ -160,7 +160,7 @@
                     <div class="comment__info">
                         <div class="comment__info__about">
                             <div class="comment__info__about__photo">
-                                <img src="/images/feedback/Rectangle.svg" alt="">
+                                <img src="./images/feedback/Rectangle.svg" alt="">
                             </div>
                             <div class="comment__info__about__name">
                                 <p class="comment__info__about__name__fullname">
@@ -172,7 +172,7 @@
                             </div>
                         </div>
                         <div class="comment__info__social">
-                            <img src="/images/feedback/Vector.svg" alt="">
+                            <img src="./images/feedback/Vector.svg" alt="">
                         </div>
 
                     </div>
@@ -193,7 +193,7 @@
                     <div class="comment__info">
                         <div class="comment__info__about">
                             <div class="comment__info__about__photo">
-                                <img src="/images/feedback/Rectangle2.svg" alt="">
+                                <img src="./images/feedback/Rectangle2.svg" alt="">
                             </div>
                             <div class="comment__info__about__name">
                                 <p class="comment__info__about__name__fullname">
@@ -205,7 +205,7 @@
                             </div>
                         </div>
                         <div class="comment__info__social">
-                            <img src="/images/feedback/Vector.svg" alt="">
+                            <img src="./images/feedback/Vector.svg" alt="">
                         </div>
 
                     </div>
@@ -222,7 +222,7 @@
                     <div class="comment__info">
                         <div class="comment__info__about">
                             <div class="comment__info__about__photo">
-                                <img src="/images/feedback/Group.svg" alt="">
+                                <img src="./images/feedback/Group.svg" alt="">
                             </div>
                             <div class="comment__info__about__name">
                                 <p class="comment__info__about__name__fullname">
@@ -234,7 +234,7 @@
                             </div>
                         </div>
                         <div class="comment__info__social">
-                            <img src="/images/feedback/Vector2.svg" alt="">
+                            <img src="./images/feedback/Vector2.svg" alt="">
                         </div>
 
                     </div>
@@ -249,7 +249,7 @@
                     <div class="comment__info">
                         <div class="comment__info__about">
                             <div class="comment__info__about__photo">
-                                <img src="/images/feedback/Group2.svg" alt="">
+                                <img src="./images/feedback/Group2.svg" alt="">
                             </div>
                             <div class="comment__info__about__name">
                                 <p class="comment__info__about__name__fullname">
@@ -261,7 +261,7 @@
                             </div>
                         </div>
                         <div class="comment__info__social">
-                            <img src="/images/feedback/Vector2.svg" alt="">
+                            <img src="./images/feedback/Vector2.svg" alt="">
                         </div>
 
                     </div>
@@ -278,7 +278,7 @@
 <footer class="footer">
     <div class="footer__block-1">
         <h2 class="footer__block-1__title">
-            <img src="/images/logo.svg" alt="">
+            <img src="./images/logo.svg" alt="">
         </h2>
         <p class="footer__block-1__text">
             Gagnez du temps,
@@ -288,13 +288,13 @@
         </p>
         <div class="footer__block__social">
             <a href="">
-                <img src="/images/footer/footer1.svg" alt="" class="footer__block-1__social__icon">
+                <img src="./images/footer/footer1.svg" alt="" class="footer__block-1__social__icon">
             </a>
             <a href="">
-                <img src="/images/footer/footer2.svg" alt="" class="footer__block-1__social__icon">
+                <img src="./images/footer/footer2.svg" alt="" class="footer__block-1__social__icon">
             </a>
             <a href="">
-                <img src="/images/footer/footer3.svg" alt="" class="footer__block-1__social__icon">
+                <img src="./images/footer/footer3.svg" alt="" class="footer__block-1__social__icon">
             </a>
         </div>
     </div>
